@@ -4,6 +4,7 @@
 * Add   - Initial code for WooCommerce.com subscriptions API.
 * Fix   - UI fix for input validation for package dimensions and weights.
 * Add   - Dynamic carrier registration form.
+* Fix   - Correct validation for UPS fields in Carrier Account connect form.
 
 = 1.25.2 - 2020-11-10 =
 * Tweak - Add ZIP code validation to UPS(beta) signup form.
